# inkflow

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
examples/: quickstart.py
inkflow/: __init__.py
inkflow/api/: __init__.py  app.py  deps.py  ws_manager.py
inkflow/api/routers/: distill.py  llm.py  outline.py  pipeline.py  projects.py  skill.py  workbench.py  world.py
inkflow/config/: __init__.py  model_settings.yaml
inkflow/core/: __init__.py  base_skill.py  llm_client.py
inkflow/distiller/: __init__.py  book_analyzer.py  skill_generator.py
inkflow/memory/: __init__.py  narrative_profile.py  outline_window.py  world_state.py
inkflow/pipeline/: __init__.py  anti_ai.py  governance.py  observer.py  outline_writer.py  pipeline.py  quality.py  reflector.py
inkflow/projects/: __init__.py  manager.py
inkflow/rag/: __init__.py  indexer.py
inkflow/skill_engine/: __init__.py  registry.py  skill_cli.py  skill_presets.py  skill_schema.py  skill_writer.py  version_manager.py
inkflow/utils/: __init__.py  atomic_io.py  llm_utils.py
inkflow/web/: __init__.py
skills/editor/: agent.py  config.yaml  prompt.md  samples.json
skills/librarian/: agent.py  config.yaml  prompt.md  samples.json
skills/prophet/: agent.py  config.yaml  prompt.md  samples.json
skills/strategist/: agent.py  config.yaml  prompt.md  samples.json
skills/writer/: agent.py  config.yaml  prompt.md  samples.json
tests/: test_full_pipeline_ch3.py  test_full_step1.py  test_librarian_pipeline.py  test_prophet.py  test_skill_engine.py
(+40 files in other folders)
